--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    cursor: pointer;
 }
 
 .cell:hover {
-    cursor: pointer;
     color: white;
 }
 
@@ -81,6 +81,7 @@ h1 {
 /* BG-CLICK */
 .clicked {
     background-color: dodgerblue;
+    cursor: not-allowed;
 }
 
 /* FOOTER CREDITS */
